--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,17 @@
 @use 'hero.scss';
 @use 'variaveis.scss';
+@use 'shows';
+
+
 
 @font-face{
-    font-family: Avenir;
-    src: url('../../assets/font/Avenir-Regular.woff2');
+    font-family: 'Avenir';
+    src: url('../../assets/fonts/Avenir-Regular.woff2');
     font-weight: 400;
 }
 @font-face{
-    font-family: Avenir;
-    src: url('../../assets/font/Avenir-Bold.woff2');
+    font-family: 'Avenir';
+    src: url('../../assets/fonts/Avenir-Bold.woff2');
     font-weight: 700;
 }
 
@@ -16,6 +19,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Avenir', sans-serif ;
 }
 
 @mixin text($font-size: 16px){
@@ -32,7 +36,7 @@
 
 body{
 
-    background-color: Avenir, sans-serif;
+    background-color: variaveis.$cor-fundo;
 }
 .text--big{
     @include text(18px);
@@ -57,6 +61,7 @@ body{
     @include text(18px);
     color:variaveis.$cor-texto-secundario ;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 
