Criando a seção "Assista do seu jeito"

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,7 +1,7 @@
 @use 'variaveis';
 
 .hero{
-   padding:  2vw;
+    padding:  5.6vh;
     min-height: 50vh;
     text-align: center;
     background-image: url('../images/hero_desktop.jpeg');
