--- a/src/styles/variaveis.scss
+++ b/src/styles/variaveis.scss
@@ -3,3 +3,5 @@
 $cor-fundo:#040714;
 $cor-texto-principal: silver;
 $cor-texto-secundario :#f9f9f9;
+$cor-fundo-btnDark: rgba(0,0,0,0.8);
+$cor-fundo-btnSec:#0063e5;
