--- a/src/styles/devices.scss
+++ b/src/styles/devices.scss
@@ -8,6 +8,12 @@ h2{
     display: grid;
     gap: 24px;
     grid-template-columns: repeat(4, 1fr) ;
+
+    @media(max-width: 768px){
+        
+        grid-template-columns: repeat(2, 1fr) ;
+    }
+
     &__item{
        
         h4{
