--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -5,7 +5,14 @@
     min-height: 50vh;
     text-align: center;
     background-image: url('../images/hero_desktop.jpeg');
-    background-size: cover;
+    background-size: cover;   
+     @media (max-width: 768px){
+       background-image: url('../../dist/images/hero_celular.jpeg') ;
+       background-repeat: no-repeat;
+       padding-top: calc(50vw + 25px);
+       background-size: contain;
+       margin-top: -55px;
+     }
     .button{
         margin-top: 2vw;
         margin-bottom: 8px;
@@ -16,6 +23,9 @@
         &__brand{
             max-width: 320px;
             margin: 0 auto 38px;
+            @media (max-width: 768px){
+              max-width: 180px;   
+             }
         }
         .title--small{
             margin-bottom: 64px;
@@ -34,8 +44,15 @@
         &__combos{
             display: flex;
             justify-content: space-between;
+            @media (max-width: 768px){
+                display: block;
+                }
             &__combo{
                 width: calc(50% - 12px);
+                @media (max-width: 768px){
+                    width: 100%;
+                    margin-bottom: 24px;
+                    }
                 img{
                     max-height: 60px;
                 }
