--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,22 +44,35 @@ body{
 }
 .text--big{
     @include text(18px);
+    @media (max-width: 768px){
+        @include text(15px);   
+     }
 }
 .text{
     @include text;
 }
 .text--small{
     @include text(12px);
+    @media (max-width: 768px){
+        @include text(11px);    }
 }
 
 .title--big{
-    @include title(44px)
+    @include title(44px);
+    @media (max-width: 768px){
+        @include title(26px);    
+    }
 }
 .title{
-    @include title(40px)
+    @include title(40px);
+
+    @media (max-width: 768px){
+        @include title(24px);    }
 }
 .title--small{
     @include title;
+    @media (max-width: 768px){
+        @include title(22px);    }
 }
 .link-text{
     @include text(18px);
@@ -114,7 +127,11 @@ body{
         display: grid;
         grid-template-columns: 1fr 1fr;
         align-items: center;
-    
+        
+        
+        @media(max-width: 768px){
+            display: block;
+        }
         img{
             max-width: 100%;
         }
@@ -139,6 +156,12 @@ body{
             display: flex;
             flex-direction: column;
             justify-content: center;
+
+            @media(max-width: 768px){
+               position: relative;
+               left: 0;
+               width: 100%;
+            }
         }
     }
 }
