--- a/src/styles/plans.scss
+++ b/src/styles/plans.scss
@@ -10,6 +10,13 @@
         display: flex;
         justify-content: space-around;
         margin-top: 50px;
+
+        @media(max-width: 768px){
+            display: block;
+        }
+        .button{
+            margin-top: 24px;
+        }
         &__item{
             max-width: 100%;
             max-width: 380px;
